add crimes api
